saving half works but saves twice then doesnt