@@ -2,6 +2,7 @@ package dev.ag6.passwordmanager.controller;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
 import dev.ag6.passwordmanager.PasswordManager;
 import dev.ag6.passwordmanager.model.Account;
 import dev.ag6.passwordmanager.view.CreateAccountView;
@@ -9,11 +10,15 @@ import dev.ag6.passwordmanager.view.MainView;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 
+import java.io.BufferedReader;
 import java.io.BufferedWriter;
+import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
+import java.util.List;
 
 public class MainController extends Controller<MainView> {
     static final ObservableList<Account> accounts = FXCollections.observableArrayList();
@@ -22,11 +27,12 @@ public class MainController extends Controller<MainView> {
 
     public MainController(MainView view) {
         super(view);
-
-        /*loadAccounts();*/
     }
 
     public void initialize() {
+        createRequiredFiles();
+        List<Account> l = loadAccounts();
+
         view.getAddButton().setOnAction(actionEvent -> {
             var createAccountView = new CreateAccountView();
             var createAccountController = new CreateAccountController(createAccountView);
@@ -49,40 +55,45 @@ public class MainController extends Controller<MainView> {
         view.getAccountList().setItems(accounts);
     }
 
-    public void saveAccounts() {
-        try {
-            if (ACCOUNTS_PATH.toFile().exists()) {
-                BufferedWriter writer = Files.newBufferedWriter(ACCOUNTS_PATH, StandardCharsets.UTF_8);
-                GSON.toJson(accounts, writer);
-            } else {
-                createRequiredFiles();
-                saveAccounts();
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
+    public void saveAccount(Account account) {
+        try(BufferedWriter writer = Files.newBufferedWriter(ACCOUNTS_PATH, StandardCharsets.UTF_8)) {
+            JsonArray jsonArray = GSON.toJsonTree(accounts).getAsJsonArray();
+            jsonArray.add(GSON.toJsonTree(account));
+            GSON.toJson(jsonArray, writer);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
+    }
+
+    public void saveAllAccounts() {
+        try (BufferedWriter writer = Files.newBufferedWriter(ACCOUNTS_PATH, StandardCharsets.UTF_8)) {
+            GSON.toJson(accounts, writer);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
     }
-    
-    /*public void loadAccounts() {
-        try {
-            if (ACCOUNTS_PATH.toFile().exists()) {
-                var reader = Files.newBufferedReader(ACCOUNTS_PATH, StandardCharsets.UTF_8);
 
-                System.out.println(Arrays.toString(accountViews));
-
-
-                accounts.addAll(accountViews.stream().map(AccountView::new).toList());
-            } else {
-               createRequiredFiles();
-            }
-        } catch(Exception e) {
+    public List<Account> loadAccounts() {
+        try (BufferedReader reader = Files.newBufferedReader(ACCOUNTS_PATH, StandardCharsets.UTF_8)) {
+            Account[] accountsList = GSON.fromJson(reader, Account[].class);
+            return List.of(accountsList);
+        } catch (IOException e) {
             e.printStackTrace();
         }
-    }*/
+        return List.of();
+    }
 
-    private void createRequiredFiles() throws Exception {
-        Files.createDirectories(ACCOUNTS_PATH.getParent());
-        Files.createFile(ACCOUNTS_PATH);
-        Files.write(ACCOUNTS_PATH, "{[]}".getBytes());
+    public void createRequiredFiles() {
+        try {
+            if (!ACCOUNTS_PATH.toFile().exists()) {
+                Files.createDirectories(ACCOUNTS_PATH.getParent());
+                Files.createFile(ACCOUNTS_PATH);
+                Files.writeString(ACCOUNTS_PATH, "[]", StandardOpenOption.CREATE);
+            }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
     }
 }
